--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script>
+    window.addEventListener('load', function () {
+      let img = document.createElement('img')
+      img.src = 'images/sea.gif'
+      document.getElementById('slide-1').appendChild(img)
+    })
+  </script>
   <style>
 #modal-container-1,
 #modal-container-2,
@@ -98,7 +105,9 @@ z-index: 9999;
 </head>
 <body class="body">
   <div class="slide-wrapper">
-    <div id="slide-1" class="slide"><img src="images/sea.gif" loading="lazy" alt="" class="slide-image"><img src="images/blue-1-2.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
+    <div id="slide-1" class="slide">
+<!--      <img src="images/sea.gif" loading="lazy" alt="" class="slide-image">-->
+      <img src="images/blue-1-2.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
       <div id="slide-text-1" class="slide-text">
         <div class="text-block-2">ABOUT</div>
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-1" alt="" class="read-img">
