--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@ z-index: 9999;
 </head>
 <body class="body">
   <div class="slide-wrapper">
-    <div id="slide-1" class="slide"><img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image"><img src="images/blue-1-2.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
+    <div id="slide-1" class="slide">
+      <video preload="auto" playsinline muted loop autoplay src="images/retro2.mp4" class="slide-image"></video>
+<!--      <img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image">-->
+      <img src="images/blue-1-2.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
       <div id="slide-text-1" class="slide-text">
         <div class="text-block-2">ABOUT</div>
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-1" alt="" class="read-img">
