--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ z-index: 9999;
 <body class="body">
   <div class="slide-wrapper">
     <div id="slide-1" class="slide">
-      <video preload="auto" playsinline muted loop autoplay src="images/retro2.mp4" class="slide-image"></video>
+      <video preload="auto" playsinline muted loop autoplay src="images/1.mp4" class="slide-image"></video>
 <!--      <img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image">-->
       <img src="images/blue-1-2.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
       <div id="slide-text-1" class="slide-text">
@@ -111,7 +111,10 @@ z-index: 9999;
         <div class="text-block-2">WHAT DO<br>WE DO</div>
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-2" alt="" class="read-img">
     </div>
-    <div id="slide-3" class="slide"><img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image"><img src="images/silver-1-1.jpg" loading="lazy" id="slide-image-hover-3" alt="" class="slide-image-hover">
+    <div id="slide-3" class="slide">
+      <video preload="auto" playsinline muted loop autoplay src="images/2.mp4" class="slide-image"></video>
+<!--      <img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image">-->
+      <img src="images/silver-1-1.jpg" loading="lazy" id="slide-image-hover-3" alt="" class="slide-image-hover">
       <div id="slide-text-3" class="slide-text">
         <div class="text-block-2">CAREERS</div>
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-3" alt="" class="read-img">
