--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@ z-index: 9999;
 <body class="body">
   <div class="slide-wrapper">
     <div id="slide-1" class="slide">
-      <video preload="auto" playsinline muted loop autoplay src="images/1.mp4" class="slide-image"></video>
-<!--      <img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image">-->
-      <img src="images/blue-1-2.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
+      <video preload="auto" playsinline muted loop autoplay src="images/3.mp4" class="slide-image"></video>
+      <img src="images/silver-1-1.jpg" loading="lazy" id="slide-image-hover-1" alt="" class="slide-image-hover">
       <div id="slide-text-1" class="slide-text">
         <div class="text-block-2">ABOUT</div>
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-1" alt="" class="read-img">
@@ -113,8 +112,7 @@ z-index: 9999;
     </div>
     <div id="slide-3" class="slide">
       <video preload="auto" playsinline muted loop autoplay src="images/2.mp4" class="slide-image"></video>
-<!--      <img src="images/Thunderbolt-1.jpg" loading="lazy" alt="" class="slide-image">-->
-      <img src="images/silver-1-1.jpg" loading="lazy" id="slide-image-hover-3" alt="" class="slide-image-hover">
+      <img src="images/hover_dark.jpg" loading="lazy" id="slide-image-hover-3" alt="" class="slide-image-hover">
       <div id="slide-text-3" class="slide-text">
         <div class="text-block-2">CAREERS</div>
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-3" alt="" class="read-img">
@@ -125,11 +123,19 @@ z-index: 9999;
       </div><img src="images/read_belo_1read_belo.png" loading="lazy" id="read-img-4" alt="" class="read-img">
     </div>
   </div>
-  <div class="slide-wrapper-tablet"><img src="images/what_do_we_do_2.jpg" loading="lazy" id="slide-tablet-1" alt="" class="slide-image-tablet slide-tablet-left"><img src="images/what_do_we_do_2.jpg" loading="lazy" id="slide-tablet-2" alt="" class="slide-image-tablet slide-tabet-right"><img src="images/what_do_we_do_2.jpg" loading="lazy" id="slide-tablet-3" alt="" class="slide-image-tablet slide-tablet-left"><img src="images/contact_2.jpg" loading="lazy" id="slide-tablet-4" alt="" class="slide-image-tablet slide-tabet-right">
+  <div class="slide-wrapper-tablet">
+    <video preload="auto" playsinline muted loop autoplay src="images/mobile1.mp4" id="slide-tablet-1" class="slide-image-tablet slide-tablet-left"></video>
+    <img src="images/mobile2.jpg" loading="lazy" id="slide-tablet-2" alt="" class="slide-image-tablet slide-tabet-right">
+    <video preload="auto" playsinline muted loop autoplay src="images/mobile3.mp4" id="slide-tablet-3" class="slide-image-tablet slide-tablet-left"></video>
+    <img src="images/mobile4.jpg" loading="lazy" id="slide-tablet-4" alt="" class="slide-image-tablet slide-tabet-right">
     <div class="logo-bg"></div>
     <div class="logo-div"></div>
   </div>
-  <div class="slide-wrapper-mobile"><img src="images/what_do_we_do_2.jpg" loading="lazy" id="slide-mobile-1" alt="" class="slide-image-mobile"><img src="images/what_do_we_do_2.jpg" loading="lazy" id="slide-mobile-2" alt="" class="slide-image-mobile"><img src="images/what_do_we_do_2.jpg" loading="lazy" id="slide-mobile-3" alt="" class="slide-image-mobile"><img src="images/contact_2.jpg" loading="lazy" id="slide-mobile-4" alt="" class="slide-image-mobile">
+  <div class="slide-wrapper-mobile">
+    <video preload="auto" playsinline muted loop autoplay src="images/mobile1.mp4" id="slide-mobile-1" class="slide-image-mobile"></video>
+    <img src="images/mobile2.jpg" loading="lazy" id="slide-mobile-2" alt="" class="slide-image-mobile">
+    <video preload="auto" playsinline muted loop autoplay src="images/mobile3.mp4" id="slide-mobile-3" class="slide-image-mobile"></video>
+    <img src="images/mobile4.jpg" loading="lazy" id="slide-mobile-4" alt="" class="slide-image-mobile">
     <div class="logo-bg"></div>
     <div class="logo-div"></div>
   </div><img src="images/Catatumbo-1.png" loading="lazy" data-w-id="03936d76-76f3-27c5-cf00-141ad33acc42" sizes="100vw" srcset="images/Catatumbo-1-p-500.png 500w, images/Catatumbo-1-p-800.png 800w, images/Catatumbo-1-p-1080.png 1080w, images/Catatumbo-1-p-1600.png 1600w, images/Catatumbo-1-p-2000.png 2000w, images/Catatumbo-1-p-2600.png 2600w, images/Catatumbo-1-p-3200.png 3200w, images/Catatumbo-1.png 8001w" alt="" class="logo"><img src="images/media2-1.png" loading="lazy" data-w-id="f250e679-8661-f567-623c-398846b1cd66" sizes="100vw" srcset="images/media2-1-p-500.png 500w, images/media2-1-p-800.png 800w, images/media2-1-p-1080.png 1080w, images/media2-1-p-1600.png 1600w, images/media2-1-p-2000.png 2000w, images/media2-1-p-2600.png 2600w, images/media2-1-p-3200.png 3200w, images/media2-1.png 8001w" alt="" class="logo-2">
