--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@ z-index: 9999;
     </div>
   </div>
   <div class="slide-wrapper-tablet">
-    <video preload="auto" playsinline muted loop autoplay src="images/mobile1.mp4" id="slide-tablet-1" class="slide-image-tablet slide-tablet-left"></video>
-    <img src="images/mobile2.jpg" loading="lazy" id="slide-tablet-2" alt="" class="slide-image-tablet slide-tabet-right">
-    <video preload="auto" playsinline muted loop autoplay src="images/mobile3.mp4" id="slide-tablet-3" class="slide-image-tablet slide-tablet-left"></video>
-    <img src="images/mobile4.jpg" loading="lazy" id="slide-tablet-4" alt="" class="slide-image-tablet slide-tabet-right">
+    <video preload="auto" playsinline muted loop autoplay src="images/mobile1.mp4" id="slide-tablet-1" class="slide-image-tablet"></video>
+    <img src="images/mobile2.jpg" loading="lazy" id="slide-tablet-2" alt="" class="slide-image-tablet">
+    <video preload="auto" playsinline muted loop autoplay src="images/mobile3.mp4" id="slide-tablet-3" class="slide-image-tablet"></video>
+    <img src="images/mobile4.jpg" loading="lazy" id="slide-tablet-4" alt="" class="slide-image-tablet">
     <div class="logo-bg"></div>
     <div class="logo-div"></div>
   </div>
