--- a/index.html
+++ b/index.html
@@ -98,20 +98,36 @@ z-index: 9999;
 </head>
 <body class="body">
   <div id="w-node-c95c1dee-b792-9e99-ec5e-8bdffdc07408-26f54db2" class="w-layout-layout quick-stack wf-layout-layout">
-    <div id="w-node-cc224412-b186-fb21-95c0-88c52de2a080-26f54db2" class="w-layout-cell cell"><img src="images/6381571-1.png" loading="lazy" alt="" class="image-3">
+    <div id="w-node-cc224412-b186-fb21-95c0-88c52de2a080-26f54db2" class="w-layout-cell cell"><img src="images/logo.svg" loading="lazy" alt="" class="image-3">
       <p class="paragraph">At Catatumbo Media, we&#x27;re committed to helping you achieve success in generating new leads.</p>
     </div>
     <div id="w-node-_2ba421b1-c7b8-15c7-fecd-d201ca6d9a1a-26f54db2" class="w-layout-cell cell-2">
-      <div id="image-wrapper-1" class="image-wrapper"><video preload="auto" playsinline muted loop autoplay src="images/1.mp4" class="image"></video><img src="images/Frame-2-1.png" loading="lazy" sizes="100vw" srcset="images/Frame-2-1-p-500.png 500w, images/Frame-2-1.png 661w" id="hover-image-1" alt="" class="hover-image"><img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-1" alt="" class="read"></div>
+      <div id="image-wrapper-1" class="image-wrapper">
+        <video preload="auto" playsinline muted loop autoplay src="images/1.mp4" class="image"></video>
+        <video preload="auto" playsinline muted loop autoplay src="images/1h.mp4" class="hover-image" id="hover-image-1"></video>
+        <img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-1" alt="" class="read">
+      </div>
     </div>
     <div id="w-node-ca3fa9b2-a89c-2228-4041-8852002e05ad-26f54db2" class="w-layout-cell cell-2">
-      <div id="image-wrapper-2" class="image-wrapper"><video preload="auto" playsinline muted loop autoplay src="images/2.mp4" class="image"></video><img src="images/Frame-3-1.png" loading="lazy" sizes="100vw" srcset="images/Frame-3-1-p-500.png 500w, images/Frame-3-1.png 661w" id="hover-image-2" alt="" class="hover-image"><img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-2" alt="" class="read"></div>
+      <div id="image-wrapper-2" class="image-wrapper">
+        <video preload="auto" playsinline muted loop autoplay src="images/2.mp4" class="image"></video>
+        <video preload="auto" playsinline muted loop autoplay src="images/2h.mp4" class="hover-image" id="hover-image-2"></video>
+        <img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-2" alt="" class="read">
+      </div>
     </div>
     <div id="w-node-b92a00e1-4c68-9b88-42e0-bbb6907ccead-26f54db2" class="w-layout-cell cell-2">
-      <div id="image-wrapper-3" class="image-wrapper"><video preload="auto" playsinline muted loop autoplay src="images/3.mp4" class="image"></video><img src="images/Frame-4-2.png" loading="lazy" sizes="100vw" srcset="images/Frame-4-2-p-500.png 500w, images/Frame-4-2.png 661w" id="hover-image-3" alt="" class="hover-image"><img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-3" alt="" class="read"></div>
+      <div id="image-wrapper-3" class="image-wrapper">
+        <video preload="auto" playsinline muted loop autoplay src="images/3.mp4" class="image"></video>
+        <video preload="auto" playsinline muted loop autoplay src="images/3h.mp4" class="hover-image" id="hover-image-3"></video>
+        <img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-3" alt="" class="read">
+      </div>
     </div>
     <div id="w-node-b66fb1ef-4261-1ba1-b193-90765add49e1-26f54db2" class="w-layout-cell cell-2">
-      <div id="image-wrapper-4" class="image-wrapper"><video preload="auto" playsinline muted loop autoplay src="images/4.mp4" class="image"></video><img src="images/Frame-5-1.png" loading="lazy" sizes="100vw" srcset="images/Frame-5-1-p-500.png 500w, images/Frame-5-1.png 661w" id="hover-image-4" alt="" class="hover-image"><img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-4" alt="" class="read"></div>
+      <div id="image-wrapper-4" class="image-wrapper">
+        <video preload="auto" playsinline muted loop autoplay src="images/4.mp4" class="image"></video>
+        <video preload="auto" playsinline muted loop autoplay src="images/4h.mp4" class="hover-image" id="hover-image-4"></video>
+        <img src="images/64725a5ac767b3d901f69ad5_read_belo.png" loading="lazy" id="read-4" alt="" class="read">
+      </div>
     </div>
   </div>
   <div id="modal-container-1" class="modal-container hide">
